Fixes HEIRLOOM-877. Post creation photos are misaligned with upload box.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -252,6 +252,7 @@ img.detail {
   margin: 2em 0 0 2em;
 
   display: inline-block;
+  vertical-align: top;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
